Cleaned up dataframes

--- a/Jupyter Notebooks/voting_map.ipynb
+++ b/Jupyter Notebooks/voting_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4   0.517847          "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,23 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing field/result... skipping.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -387,7 +373,7 @@
        "9    0.457624   0.542376  52.4037  -0.242812  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,32 +415,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-84-a554684098b9>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-84-a554684098b9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for_brexit = county_vote_df[\"Pct_Leave\"]*100.astype(float)\u001b[0m\n\u001b[0m                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "locations = county_vote_df[[\"Lat\", \"Lng\"]].astype(float)\n",
-    "for_brexit = county_vote_df[\"Pct_Leave\"]*100.astype(float)"
+    "for_brexit = county_vote_df[\"Pct_Leave\"].astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00295c0bce0d4aa68dda8c3908ce9b5b",
+       "model_id": "0ff48eb30fda4c56b127828d7eb3b7bf",
        "version_major": 2,
        "version_minor": 0
       },
