Preference strength dfs created

--- a/Jupyter Notebooks/voting_dataframes.ipynb
+++ b/Jupyter Notebooks/voting_dataframes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,23 @@
     "    output_file = os.path.join('..', 'Resources', dataframe.name +'.csv')\n",
     "    #  Open the output file\n",
     "    with open(output_file, 'w') as datafile:\n",
-    "        dataframe.to_csv(output_file)"
+    "        dataframe.to_csv(output_file)\n",
+    "        \n",
+    "strong_leave_df = county_vote_df[county_vote_df[\"Pct_Leave\"] > .65]\n",
+    "strong_leave_df.name = 'strong_leave_df'\n",
+    "output_file = os.path.join('..', 'Resources', strong_leave_df.name +'.csv')\n",
+    "with open(output_file, 'w') as datafile:\n",
+    "        strong_leave_df.to_csv(output_file)\n",
+    "strong_remain_df = county_vote_df[county_vote_df[\"Pct_Remain\"] > .65]\n",
+    "strong_remain_df.name = 'strong_remain_df'\n",
+    "output_file = os.path.join('..', 'Resources', strong_remain_df.name +'.csv')\n",
+    "with open(output_file, 'w') as datafile:\n",
+    "        strong_remain_df.to_csv(output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -56,146 +67,309 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Area</th>\n",
        "      <th>Valid_Votes</th>\n",
        "      <th>Remain</th>\n",
        "      <th>Leave</th>\n",
        "      <th>Pct_Remain</th>\n",
        "      <th>Pct_Leave</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Region</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>East</th>\n",
-       "      <td>3328983</td>\n",
-       "      <td>1448616</td>\n",
-       "      <td>1880367</td>\n",
-       "      <td>0.435153</td>\n",
-       "      <td>0.564847</td>\n",
+       "      <th>6</th>\n",
+       "      <td>East</td>\n",
+       "      <td>Cambridge</td>\n",
+       "      <td>57799</td>\n",
+       "      <td>42682</td>\n",
+       "      <td>15117</td>\n",
+       "      <td>0.738456</td>\n",
+       "      <td>0.261544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>East Midlands</th>\n",
-       "      <td>2508515</td>\n",
-       "      <td>1033036</td>\n",
-       "      <td>1475479</td>\n",
-       "      <td>0.411812</td>\n",
-       "      <td>0.588188</td>\n",
+       "      <th>87</th>\n",
+       "      <td>London</td>\n",
+       "      <td>City of London</td>\n",
+       "      <td>4399</td>\n",
+       "      <td>3312</td>\n",
+       "      <td>1087</td>\n",
+       "      <td>0.752898</td>\n",
+       "      <td>0.247102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>London</th>\n",
-       "      <td>3776751</td>\n",
-       "      <td>2263519</td>\n",
-       "      <td>1513232</td>\n",
-       "      <td>0.599330</td>\n",
-       "      <td>0.400670</td>\n",
+       "      <th>93</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Camden</td>\n",
+       "      <td>95133</td>\n",
+       "      <td>71295</td>\n",
+       "      <td>23838</td>\n",
+       "      <td>0.749424</td>\n",
+       "      <td>0.250576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>North East</th>\n",
-       "      <td>1340698</td>\n",
-       "      <td>562595</td>\n",
-       "      <td>778103</td>\n",
-       "      <td>0.419628</td>\n",
-       "      <td>0.580372</td>\n",
+       "      <th>98</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Hackney</td>\n",
+       "      <td>106266</td>\n",
+       "      <td>83398</td>\n",
+       "      <td>22868</td>\n",
+       "      <td>0.784804</td>\n",
+       "      <td>0.215196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>North West</th>\n",
-       "      <td>3665945</td>\n",
-       "      <td>1699020</td>\n",
-       "      <td>1966925</td>\n",
-       "      <td>0.463460</td>\n",
-       "      <td>0.536540</td>\n",
+       "      <th>99</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Hammersmith and Fulham</td>\n",
+       "      <td>80242</td>\n",
+       "      <td>56188</td>\n",
+       "      <td>24054</td>\n",
+       "      <td>0.700232</td>\n",
+       "      <td>0.299768</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Northern Ireland</th>\n",
-       "      <td>790149</td>\n",
-       "      <td>440707</td>\n",
-       "      <td>349442</td>\n",
-       "      <td>0.557752</td>\n",
-       "      <td>0.442248</td>\n",
+       "      <th>100</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Haringey</td>\n",
+       "      <td>105846</td>\n",
+       "      <td>79991</td>\n",
+       "      <td>25855</td>\n",
+       "      <td>0.755730</td>\n",
+       "      <td>0.244270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Scotland</th>\n",
-       "      <td>2679513</td>\n",
-       "      <td>1661191</td>\n",
-       "      <td>1018322</td>\n",
-       "      <td>0.619960</td>\n",
-       "      <td>0.380040</td>\n",
+       "      <th>105</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Islington</td>\n",
+       "      <td>101600</td>\n",
+       "      <td>76420</td>\n",
+       "      <td>25180</td>\n",
+       "      <td>0.752165</td>\n",
+       "      <td>0.247835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>South East</th>\n",
-       "      <td>4959683</td>\n",
-       "      <td>2391718</td>\n",
-       "      <td>2567965</td>\n",
-       "      <td>0.482232</td>\n",
-       "      <td>0.517768</td>\n",
+       "      <th>106</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Kensington and Chelsea</td>\n",
+       "      <td>54739</td>\n",
+       "      <td>37601</td>\n",
+       "      <td>17138</td>\n",
+       "      <td>0.686914</td>\n",
+       "      <td>0.313086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>South West</th>\n",
-       "      <td>3172730</td>\n",
-       "      <td>1503019</td>\n",
-       "      <td>1669711</td>\n",
-       "      <td>0.473731</td>\n",
-       "      <td>0.526269</td>\n",
+       "      <th>108</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Lambeth</td>\n",
+       "      <td>141924</td>\n",
+       "      <td>111584</td>\n",
+       "      <td>30340</td>\n",
+       "      <td>0.786224</td>\n",
+       "      <td>0.213776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Wales</th>\n",
-       "      <td>1626919</td>\n",
-       "      <td>772347</td>\n",
-       "      <td>854572</td>\n",
-       "      <td>0.474730</td>\n",
-       "      <td>0.525270</td>\n",
+       "      <th>109</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Lewisham</td>\n",
+       "      <td>124473</td>\n",
+       "      <td>86955</td>\n",
+       "      <td>37518</td>\n",
+       "      <td>0.698585</td>\n",
+       "      <td>0.301415</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>West Midlands</th>\n",
-       "      <td>2962862</td>\n",
-       "      <td>1207175</td>\n",
-       "      <td>1755687</td>\n",
-       "      <td>0.407435</td>\n",
-       "      <td>0.592565</td>\n",
+       "      <th>113</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Richmond upon Thames</td>\n",
+       "      <td>108806</td>\n",
+       "      <td>75396</td>\n",
+       "      <td>33410</td>\n",
+       "      <td>0.692940</td>\n",
+       "      <td>0.307060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Yorkshire and The Humber</th>\n",
-       "      <td>2739235</td>\n",
-       "      <td>1158298</td>\n",
-       "      <td>1580937</td>\n",
-       "      <td>0.422855</td>\n",
-       "      <td>0.577145</td>\n",
+       "      <th>114</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Southwark</td>\n",
+       "      <td>129502</td>\n",
+       "      <td>94293</td>\n",
+       "      <td>35209</td>\n",
+       "      <td>0.728120</td>\n",
+       "      <td>0.271880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Tower Hamlets</td>\n",
+       "      <td>108235</td>\n",
+       "      <td>73011</td>\n",
+       "      <td>35224</td>\n",
+       "      <td>0.674560</td>\n",
+       "      <td>0.325440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Wandsworth</td>\n",
+       "      <td>157884</td>\n",
+       "      <td>118463</td>\n",
+       "      <td>39421</td>\n",
+       "      <td>0.750317</td>\n",
+       "      <td>0.249683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Westminster</td>\n",
+       "      <td>78196</td>\n",
+       "      <td>53928</td>\n",
+       "      <td>24268</td>\n",
+       "      <td>0.689652</td>\n",
+       "      <td>0.310348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>East Renfrewshire</td>\n",
+       "      <td>52941</td>\n",
+       "      <td>39345</td>\n",
+       "      <td>13596</td>\n",
+       "      <td>0.743186</td>\n",
+       "      <td>0.256814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>Stirling</td>\n",
+       "      <td>48899</td>\n",
+       "      <td>33112</td>\n",
+       "      <td>15787</td>\n",
+       "      <td>0.677151</td>\n",
+       "      <td>0.322849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>City of Edinburgh</td>\n",
+       "      <td>252294</td>\n",
+       "      <td>187796</td>\n",
+       "      <td>64498</td>\n",
+       "      <td>0.744354</td>\n",
+       "      <td>0.255646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>East Dunbartonshire</td>\n",
+       "      <td>62374</td>\n",
+       "      <td>44534</td>\n",
+       "      <td>17840</td>\n",
+       "      <td>0.713983</td>\n",
+       "      <td>0.286017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>Glasgow City</td>\n",
+       "      <td>252809</td>\n",
+       "      <td>168335</td>\n",
+       "      <td>84474</td>\n",
+       "      <td>0.665858</td>\n",
+       "      <td>0.334142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212</th>\n",
+       "      <td>South East</td>\n",
+       "      <td>Brighton and Hove</td>\n",
+       "      <td>146675</td>\n",
+       "      <td>100648</td>\n",
+       "      <td>46027</td>\n",
+       "      <td>0.686197</td>\n",
+       "      <td>0.313803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>South East</td>\n",
+       "      <td>Oxford</td>\n",
+       "      <td>70337</td>\n",
+       "      <td>49424</td>\n",
+       "      <td>20913</td>\n",
+       "      <td>0.702674</td>\n",
+       "      <td>0.297326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>South West</td>\n",
+       "      <td>Gibraltar</td>\n",
+       "      <td>20145</td>\n",
+       "      <td>19322</td>\n",
+       "      <td>823</td>\n",
+       "      <td>0.959146</td>\n",
+       "      <td>0.040854</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          Valid_Votes   Remain    Leave  Pct_Remain  Pct_Leave\n",
-       "Region                                                                        \n",
-       "East                          3328983  1448616  1880367    0.435153   0.564847\n",
-       "East Midlands                 2508515  1033036  1475479    0.411812   0.588188\n",
-       "London                        3776751  2263519  1513232    0.599330   0.400670\n",
-       "North East                    1340698   562595   778103    0.419628   0.580372\n",
-       "North West                    3665945  1699020  1966925    0.463460   0.536540\n",
-       "Northern Ireland               790149   440707   349442    0.557752   0.442248\n",
-       "Scotland                      2679513  1661191  1018322    0.619960   0.380040\n",
-       "South East                    4959683  2391718  2567965    0.482232   0.517768\n",
-       "South West                    3172730  1503019  1669711    0.473731   0.526269\n",
-       "Wales                         1626919   772347   854572    0.474730   0.525270\n",
-       "West Midlands                 2962862  1207175  1755687    0.407435   0.592565\n",
-       "Yorkshire and The Humber      2739235  1158298  1580937    0.422855   0.577145"
+       "         Region                    Area  Valid_Votes  Remain  Leave  \\\n",
+       "6          East               Cambridge        57799   42682  15117   \n",
+       "87       London          City of London         4399    3312   1087   \n",
+       "93       London                  Camden        95133   71295  23838   \n",
+       "98       London                 Hackney       106266   83398  22868   \n",
+       "99       London  Hammersmith and Fulham        80242   56188  24054   \n",
+       "100      London                Haringey       105846   79991  25855   \n",
+       "105      London               Islington       101600   76420  25180   \n",
+       "106      London  Kensington and Chelsea        54739   37601  17138   \n",
+       "108      London                 Lambeth       141924  111584  30340   \n",
+       "109      London                Lewisham       124473   86955  37518   \n",
+       "113      London    Richmond upon Thames       108806   75396  33410   \n",
+       "114      London               Southwark       129502   94293  35209   \n",
+       "116      London           Tower Hamlets       108235   73011  35224   \n",
+       "118      London              Wandsworth       157884  118463  39421   \n",
+       "119      London             Westminster        78196   53928  24268   \n",
+       "176    Scotland       East Renfrewshire        52941   39345  13596   \n",
+       "191    Scotland                Stirling        48899   33112  15787   \n",
+       "195    Scotland       City of Edinburgh       252294  187796  64498   \n",
+       "202    Scotland     East Dunbartonshire        62374   44534  17840   \n",
+       "203    Scotland            Glasgow City       252809  168335  84474   \n",
+       "212  South East       Brighton and Hove       146675  100648  46027   \n",
+       "249  South East                  Oxford        70337   49424  20913   \n",
+       "308  South West               Gibraltar        20145   19322    823   \n",
+       "\n",
+       "     Pct_Remain  Pct_Leave  \n",
+       "6      0.738456   0.261544  \n",
+       "87     0.752898   0.247102  \n",
+       "93     0.749424   0.250576  \n",
+       "98     0.784804   0.215196  \n",
+       "99     0.700232   0.299768  \n",
+       "100    0.755730   0.244270  \n",
+       "105    0.752165   0.247835  \n",
+       "106    0.686914   0.313086  \n",
+       "108    0.786224   0.213776  \n",
+       "109    0.698585   0.301415  \n",
+       "113    0.692940   0.307060  \n",
+       "114    0.728120   0.271880  \n",
+       "116    0.674560   0.325440  \n",
+       "118    0.750317   0.249683  \n",
+       "119    0.689652   0.310348  \n",
+       "176    0.743186   0.256814  \n",
+       "191    0.677151   0.322849  \n",
+       "195    0.744354   0.255646  \n",
+       "202    0.713983   0.286017  \n",
+       "203    0.665858   0.334142  \n",
+       "212    0.686197   0.313803  \n",
+       "249    0.702674   0.297326  \n",
+       "308    0.959146   0.040854  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "region_vote_df"
+    "strong_remain_df"
    ]
   },
   {
