--- a/SOLBREXIT.ipynb
+++ b/SOLBREXIT.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis\n",
+    "-\"For” Brexit  precincts had higher unemployment rates during the global recession and years leading up to Brexit compared to ‘Against’ Brexit precincts.\n",
+    "-Job Density is consistently higher in Precincts that voted “Against” Brexit. \n",
+    "-“For” Brexit precincts consistently have a job density less than 1, which indicates more people (ages 16-64) than available jobs.\n",
+    "-\"Against\" Brexit precincts have a consistently higher gross weekly pay than \"For\" Brexit precincts\n",
+    "-\"For\" Brexit precincts had reduced gross weekly pay during the global recession while \"Against\" Brexit precincts still had increasing gross weekly earnings during the recession."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 242,
    "metadata": {},
@@ -16,10 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import csv\n",
     "jobsdensity_df = pd.read_csv(r\"jobsdensity.csv\")\n",
     "unemployment_df = pd.read_csv(r\"unemployment.csv\")\n",
     "weeklypaybyarea_df = pd.read_csv(r\"weeklypaybyarea.csv\")"
@@ -27,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +192,7 @@
        "4  0.66  0.72  0.76  0.77  0.72  0.78  "
       ]
      },
-     "execution_count": 244,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,6 +426,238 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gross Weekly Pay by Area ( Median)</th>\n",
+       "      <th>2004</th>\n",
+       "      <th>2005</th>\n",
+       "      <th>2006</th>\n",
+       "      <th>2007</th>\n",
+       "      <th>2008</th>\n",
+       "      <th>2009</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>North East Lincolnshire</td>\n",
+       "      <td>368.3</td>\n",
+       "      <td>383.3</td>\n",
+       "      <td>391.8</td>\n",
+       "      <td>390.6</td>\n",
+       "      <td>431.1</td>\n",
+       "      <td>451.7</td>\n",
+       "      <td>429.3</td>\n",
+       "      <td>482.6</td>\n",
+       "      <td>460.1</td>\n",
+       "      <td>466.4</td>\n",
+       "      <td>468.6</td>\n",
+       "      <td>450.4</td>\n",
+       "      <td>469.9</td>\n",
+       "      <td>447.9</td>\n",
+       "      <td>497.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Boston</td>\n",
+       "      <td>338.9</td>\n",
+       "      <td>357.0</td>\n",
+       "      <td>376.6</td>\n",
+       "      <td>397.5</td>\n",
+       "      <td>373.2</td>\n",
+       "      <td>369.5</td>\n",
+       "      <td>396.0</td>\n",
+       "      <td>365.3</td>\n",
+       "      <td>399.2</td>\n",
+       "      <td>411.1</td>\n",
+       "      <td>430.7</td>\n",
+       "      <td>411.0</td>\n",
+       "      <td>411.2</td>\n",
+       "      <td>410.2</td>\n",
+       "      <td>421.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cambridge</td>\n",
+       "      <td>462.6</td>\n",
+       "      <td>475.8</td>\n",
+       "      <td>486.0</td>\n",
+       "      <td>493.1</td>\n",
+       "      <td>524.6</td>\n",
+       "      <td>547.9</td>\n",
+       "      <td>556.4</td>\n",
+       "      <td>574.4</td>\n",
+       "      <td>617.7</td>\n",
+       "      <td>572.3</td>\n",
+       "      <td>575.6</td>\n",
+       "      <td>583.3</td>\n",
+       "      <td>589.1</td>\n",
+       "      <td>595.6</td>\n",
+       "      <td>642.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Castle Point</td>\n",
+       "      <td>465.5</td>\n",
+       "      <td>486.2</td>\n",
+       "      <td>499.4</td>\n",
+       "      <td>488.1</td>\n",
+       "      <td>539.1</td>\n",
+       "      <td>529.1</td>\n",
+       "      <td>465.2</td>\n",
+       "      <td>519.2</td>\n",
+       "      <td>512.1</td>\n",
+       "      <td>537.2</td>\n",
+       "      <td>568.1</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>555.7</td>\n",
+       "      <td>632.4</td>\n",
+       "      <td>607.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lambeth</td>\n",
+       "      <td>491.4</td>\n",
+       "      <td>509.6</td>\n",
+       "      <td>508.0</td>\n",
+       "      <td>538.7</td>\n",
+       "      <td>553.0</td>\n",
+       "      <td>598.3</td>\n",
+       "      <td>647.0</td>\n",
+       "      <td>632.4</td>\n",
+       "      <td>625.8</td>\n",
+       "      <td>629.6</td>\n",
+       "      <td>628.3</td>\n",
+       "      <td>616.5</td>\n",
+       "      <td>616.2</td>\n",
+       "      <td>666.1</td>\n",
+       "      <td>689.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Havering</td>\n",
+       "      <td>518.2</td>\n",
+       "      <td>541.6</td>\n",
+       "      <td>525.0</td>\n",
+       "      <td>549.5</td>\n",
+       "      <td>606.6</td>\n",
+       "      <td>576.7</td>\n",
+       "      <td>593.8</td>\n",
+       "      <td>582.3</td>\n",
+       "      <td>584.3</td>\n",
+       "      <td>594.1</td>\n",
+       "      <td>615.4</td>\n",
+       "      <td>624.7</td>\n",
+       "      <td>622.9</td>\n",
+       "      <td>631.0</td>\n",
+       "      <td>642.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Oxford</td>\n",
+       "      <td>435.7</td>\n",
+       "      <td>451.8</td>\n",
+       "      <td>466.3</td>\n",
+       "      <td>483.6</td>\n",
+       "      <td>498.2</td>\n",
+       "      <td>495.6</td>\n",
+       "      <td>514.9</td>\n",
+       "      <td>526.5</td>\n",
+       "      <td>517.9</td>\n",
+       "      <td>533.1</td>\n",
+       "      <td>571.8</td>\n",
+       "      <td>556.8</td>\n",
+       "      <td>589.1</td>\n",
+       "      <td>631.6</td>\n",
+       "      <td>623.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>City of Edinburgh</td>\n",
+       "      <td>428.2</td>\n",
+       "      <td>460.2</td>\n",
+       "      <td>479.7</td>\n",
+       "      <td>498.8</td>\n",
+       "      <td>507.2</td>\n",
+       "      <td>514.3</td>\n",
+       "      <td>523.6</td>\n",
+       "      <td>525.4</td>\n",
+       "      <td>537.7</td>\n",
+       "      <td>562.0</td>\n",
+       "      <td>562.6</td>\n",
+       "      <td>555.3</td>\n",
+       "      <td>559.7</td>\n",
+       "      <td>583.8</td>\n",
+       "      <td>575.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Gross Weekly Pay by Area ( Median)   2004   2005   2006   2007   2008  \\\n",
+       "0            North East Lincolnshire  368.3  383.3  391.8  390.6  431.1   \n",
+       "1                             Boston  338.9  357.0  376.6  397.5  373.2   \n",
+       "2                          Cambridge  462.6  475.8  486.0  493.1  524.6   \n",
+       "3                       Castle Point  465.5  486.2  499.4  488.1  539.1   \n",
+       "4                            Lambeth  491.4  509.6  508.0  538.7  553.0   \n",
+       "5                           Havering  518.2  541.6  525.0  549.5  606.6   \n",
+       "6                             Oxford  435.7  451.8  466.3  483.6  498.2   \n",
+       "7                  City of Edinburgh  428.2  460.2  479.7  498.8  507.2   \n",
+       "\n",
+       "    2009   2010   2011   2012   2013   2014   2015   2016   2017   2018  \n",
+       "0  451.7  429.3  482.6  460.1  466.4  468.6  450.4  469.9  447.9  497.0  \n",
+       "1  369.5  396.0  365.3  399.2  411.1  430.7  411.0  411.2  410.2  421.6  \n",
+       "2  547.9  556.4  574.4  617.7  572.3  575.6  583.3  589.1  595.6  642.4  \n",
+       "3  529.1  465.2  519.2  512.1  537.2  568.1  550.0  555.7  632.4  607.6  \n",
+       "4  598.3  647.0  632.4  625.8  629.6  628.3  616.5  616.2  666.1  689.9  \n",
+       "5  576.7  593.8  582.3  584.3  594.1  615.4  624.7  622.9  631.0  642.0  \n",
+       "6  495.6  514.9  526.5  517.9  533.1  571.8  556.8  589.1  631.6  623.8  \n",
+       "7  514.3  523.6  525.4  537.7  562.0  562.6  555.3  559.7  583.8  575.9  "
+      ]
+     },
+     "execution_count": 347,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weeklypaybyarea_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 246,
    "metadata": {},
    "outputs": [
@@ -556,6 +801,7 @@
     }
    ],
    "source": [
+    "#separate precincts that voted strongly \"For\" Brexit\n",
     "strongleave_df=weeklypaybyarea_df.loc[[0,1,3,5], :]\n",
     "strongleave_df"
    ]
@@ -695,6 +941,7 @@
     }
    ],
    "source": [
+    "#calculate averages for precincts that voted strongly \"For\" Brexit\n",
     "strongleaveaverage_df=strongleave_df.mean()\n",
     "strongleaveaverage_df=strongleaveaverage_df.to_frame().reset_index()\n",
     "strongleaveaverage_df"
@@ -845,6 +1092,7 @@
     }
    ],
    "source": [
+    "#separate precincts that voted strongly \"Against\" Brexit\n",
     "strongstay_df=weeklypaybyarea_df.loc[[2,4,6,7], :]\n",
     "strongstay_df"
    ]
@@ -984,6 +1232,7 @@
     }
    ],
    "source": [
+    "#calculate average for precincts that voted strongly \"Against\" Brexit\n",
     "strongstayaverage_df=strongstay_df.mean()\n",
     "strongstayaverage_df=strongstayaverage_df.to_frame().reset_index()\n",
     "strongstayaverage_df"
@@ -1140,6 +1389,7 @@
     }
    ],
    "source": [
+    "#merge them together to compare averages\n",
     "weeklypaycomparison_df=pd.merge(strongstayaverage_df, strongleaveaverage_df, on='index', how='outer')\n",
     "weeklypaycomparison_df"
    ]
@@ -1150,6 +1400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#rename the columns\n",
     "weeklypaycomparison_df= weeklypaycomparison_df.rename(columns={'index': 'Date', '0_x': 'Gross Weekly Pay in Strong Remain Voting Precincts', '0_y': 'Gross Weekly Pay in Strong Leave Voting Precincts'})\n",
     "pd.set_option('display.precision', 2)\n"
    ]
@@ -1484,6 +1735,7 @@
     }
    ],
    "source": [
+    "#make the date column the index\n",
     "weeklypaycomparison_df=weeklypaycomparison_df.set_index('Date')\n",
     "weeklypaycomparison_df"
    ]
@@ -1519,6 +1771,7 @@
     }
    ],
    "source": [
+    "# plot the dataframe to visualize trends\n",
     "weeklypaycomparison_df.plot(marker=\"o\")\n",
     "plt.title(\"Weekly Pay Comparison Between Strong 'For' & Strong 'Against' Voting Precincts\")\n",
     "plt.xlabel('Years')\n",
@@ -1685,6 +1938,7 @@
     }
    ],
    "source": [
+    "# separate precincts that voted strongly \"For\" Brexit\n",
     "strongleaveunemployment_df=unemployment_df.loc[[0,1,3,5], :]\n",
     "strongleaveunemployment_df"
    ]
@@ -1818,6 +2072,7 @@
     }
    ],
    "source": [
+    "# separate precincts that voted strongly \"For\" Brexit\n",
     "strongleaveavgunemployment_df=strongleaveunemployment_df.mean()\n",
     "strongleaveavgunemployment_df=strongleaveavgunemployment_df.to_frame().reset_index()\n",
     "strongleaveavgunemployment_df"
@@ -1963,6 +2218,7 @@
     }
    ],
    "source": [
+    "#separate precincts that voted to \"Against\" Brexit\n",
     "strongstayunemployment_df=unemployment_df.loc[[2,4,6,7], :]\n",
     "strongstayunemployment_df"
    ]
@@ -2096,6 +2352,7 @@
     }
    ],
    "source": [
+    "#calculate averages for \"Against\" precincts\n",
     "strongstayavgunemployment_df=strongstayunemployment_df.mean()\n",
     "strongstayavgunemployment_df=strongstayavgunemployment_df.to_frame().reset_index()\n",
     "strongstayavgunemployment_df"
@@ -2245,6 +2502,7 @@
     }
    ],
    "source": [
+    "#merge to compare\n",
     "unemploymentcomparison_df=pd.merge(strongstayavgunemployment_df, strongleaveavgunemployment_df,on='index', how='outer')\n",
     "unemploymentcomparison_df"
    ]
@@ -2409,6 +2667,7 @@
     }
    ],
    "source": [
+    "#rename columns\n",
     "unemploymentcomparison_df= unemploymentcomparison_df.rename(columns={'index': 'Date', '0_x': 'Unemployment Rate in Strong Remain Voting Precincts', '0_y': 'Unemployment Rate in Strong Leave Voting Precincts'})\n",
     "pd.set_option('display.precision', 2)\n",
     "unemploymentcomparison_df"
@@ -2566,6 +2825,7 @@
     }
    ],
    "source": [
+    "#make date the index\n",
     "unemploymentcomparison_df=unemploymentcomparison_df.set_index('Date')\n",
     "unemploymentcomparison_df"
    ]
@@ -2599,6 +2859,7 @@
     }
    ],
    "source": [
+    "#plot to visualize trends\n",
     "unemploymentcomparison_df.plot(marker=\"o\")\n",
     "plt.title(\"Unemployment Rate (%) in Strong 'For' & Strong 'Against' Voting Precincts\")\n",
     "plt.xlabel('Years')\n",
@@ -2757,6 +3018,7 @@
     }
    ],
    "source": [
+    "#separate precincts that voted strongly \"For\" Brexit\n",
     "jobdensityleave_df=jobsdensity_df.loc[[0,1,3,5], :]\n",
     "jobdensityleave_df"
    ]
@@ -2890,6 +3152,7 @@
     }
    ],
    "source": [
+    "#calculate precincts that voted strongly \"Against\" Brexit\n",
     "avgjobdensityleave_df=jobdensityleave_df.mean()\n",
     "avgjobdensityleave_df=avgjobdensityleave_df.to_frame().reset_index()\n",
     "avgjobdensityleave_df"
@@ -3035,6 +3298,7 @@
     }
    ],
    "source": [
+    "#separate precincts that voted strongly \"Against\" Brexit\n",
     "jobdensitystay_df=jobsdensity_df.loc[[2,4,6,7], :]\n",
     "jobdensitystay_df"
    ]
@@ -3168,6 +3432,7 @@
     }
    ],
    "source": [
+    "#calculate averages\n",
     "avgjobdensitystay_df=jobdensitystay_df.mean()\n",
     "avgjobdensitystay_df=avgjobdensitystay_df.to_frame().reset_index()\n",
     "avgjobdensitystay_df"
@@ -3317,6 +3582,7 @@
     }
    ],
    "source": [
+    "#merge to compare\n",
     "jobdensitycomparison_df=pd.merge(avgjobdensitystay_df, avgjobdensityleave_df, on='index', how='outer')\n",
     "jobdensitycomparison_df"
    ]
@@ -3481,6 +3747,7 @@
     }
    ],
    "source": [
+    "#rename columns\n",
     "jobdensitycomparison_df= jobdensitycomparison_df.rename(columns={'index': 'Date', '0_x': 'Job Density in Strong Remain Cities', '0_y': 'Job Density in Strong Leave Cities'})\n",
     "pd.set_option('display.precision', 2)\n",
     "jobdensitycomparison_df"
@@ -3621,6 +3888,7 @@
     }
    ],
    "source": [
+    "#make date index\n",
     "jobdensitycomparison_df=jobdensitycomparison_df.set_index('Date')\n",
     "jobdensitycomparison_df"
    ]
@@ -3656,6 +3924,7 @@
     }
    ],
    "source": [
+    "#plot to visualize trends\n",
     "jobdensitycomparison_df.plot(marker=\"o\")\n",
     "plt.title(\"Job Density in Strong 'For' & Strong 'Against' Precincts\")\n",
     "plt.xlabel('Years')\n",
@@ -3673,13 +3942,6 @@
     "dashed_line4 = mlines.Line2D([],[],color='Black',linestyle='dashed',alpha=.8,label='Brexit referendum')\n",
     "plt.legend(loc ='center left',bbox_to_anchor=(1, 0.5), handles=[dashed_line2, dashed_line3,dashed_line1,dashed_line4])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
